<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="help_button">\?</string>
    <string name="selection_button3">Ділова</string>
    <string name="selection_text">Оберіть тип вашої візи</string>
    <string name="selection_button2">Робоча</string>
    <string name="selection_button1">Студентська</string>
    <string name="selection_button4">Туристична</string>
    <string name="selection_button5">Шопінг</string>
    <string name="app_name" >Kunzhut</string>
    <string name="help_title">Типи віз</string>
    <string name="help_description"><i>Студентська:</i>\n
        \nСтудентська віза - це відмітка (штамп) встановленого зразка в закордонному паспорті, що дає право абітурієнту в\'їхати на територію відповідної держави для проходження навчального курсу. Це неімміграційна віза.
        Такі візи видаються особам, які бажають отримати вищу або середню спеціальну освіту за кордоном, пройти мовні курси та курси підвищення кваліфікації, брати участь у спеціалізованих навчальних програмах, що організовуються акредитованими навчальними закладами.
        \n\n<b>Робоча:</b>
        \n\nРобоча віза дає право на виконання роботи згідно з отриманим дозволом на роботу, в якому, крім іншого, вказані позиція і вид роботи, яку іноземець буде виконувати. Максимальний період працевлаштування - 1 рік.
        У разі зацікавленості в даному працівникові роботодавець може подати заяву про продовження дозволу на роботу в строк мінімально 30 днів до терміну закінчення попереднього дозволу на роботу.
        \n\n<b>Ділова:</b>
        \n\nДілова віза видається
        громадянам, які виїжджають за кордон з діловими цілями при наявності туристичного ваучера будь-яких іноземних організацій. Бізнес віза в порівнянні з туристичною візою має деякі особливості.
         Так, ділова віза видається на основі ділового запрошення від комерційної організації, в той час як для отримання туристичної візи відповідне запрошення висилає туристична фірма. Бізнес віза може бути продовжена на території іноземної країни, а туристичну візу продовжити в таких умовах не можна.
        Крім того, ділова віза має термін дії понад 30 днів.
        \n\n<b>Туристична:</b>
        \n\nТуристична віза потрібна для осіб, які планують туристичний виїзд і не мають наміру займатися бізнесом чи працевлаштовуватись. Таку візу відкривають на різний термін: від 1 до 30 днів.
        В перелік документів для туристичної шенгенської візи, ви повинні внести підтвердження бронювання готелю на цей період, оплату готелю, план подорожі. Важливо,
        що дипломатичні установи Польщі тепер не співпрацюють з акредитованими туристичними фірмами, бажаючий отримати туристичну візу реєструється і  подає документи на візу самостійно.
        Ця процедура необхідна для надання біометричних даних, що з червня 2015 є обов’язковим для отримання будь-якого типу шенгенської візи. Довготермінову шенгенську туристичну візу (на рік і більше) можуть отримати лише ті,
        хто вже мав 2 візи цієї категорії (одну з них національну) використані за призначенням, та подав підтвердження мети подорожі ( 100 % оплата туристичної подорожі терміном не менш як на 3 дні).
        \n\n<b>Шопінг:</b>
        \n\nШопінг-віза - віза на закупи - ця віза є спеціальною пропозицією лише Республіки Польщі для громадян які проживають на Західній Україні.
        Повторна закупівельна віза до Польщі видається тільки при наявності документів (VAT і TAX Free на ваше ім’я) про здійснення покупок на території країни, при минулій поїздці.
        Така віза до Польщі відкривається на рік і дає право в будь-який час з’їздити за кордон. Це дуже зручно, оскільки можна себе не обмежувати і відправитися в шоп-тур в
        будь-який час — наприклад, перед святами або в сезон великих знижок.
        </string>

    <string name="steps_description">Ось список кроків, які Ви повинні виконати, аби почати процес подачі документів</string>
    <string name="start_over">Перейти до вибору типу візи</string>
</resources>